src/Grammar.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Grammar.java */
import java.util.HashMap;
import java.lang.*;
import java.util.*;
import java.io.File;
import java.io.FileInputStream;
import java.io.BufferedReader;
import java.io.FileReader;
import java.io.FileNotFoundException;

public class Grammar/*@bgen(jjtree)*/implements GrammarTreeConstants, GrammarConstants {/*@bgen(jjtree)*/
  protected static JJTGrammarState jjtree = new JJTGrammarState();/*local vars-> params function-> global vars*/
        private static HashMap<String,Object> localVars=new HashMap<String,Object>();
        private static HashMap<String,Object> funcParams=new HashMap<String,Object>();
        private static HashMap<String,Object> globalVars=new HashMap<String,Object>();
        private static HashMap<String,Object> funcReturn=new HashMap<String,Object>();
        private static HashMap<String,String> functions=new HashMap<String,String>();

        private static ArrayList<String> order = new ArrayList<String>();

        private static String ret, declaration, funcName, LocalVar, numFunc, numFunc2, name_f2, name_f1, ReturnVar, string_aux2;
        private static int i=0, j=0, aux=0, k=0, g=0, aux1=0, flag=0, flagArrSize=0, flagt1, flagt2;
        private static String globalSignal, filename;
        private static File teste;

        private static Boolean globalVar=false,funcParam=false, error=false;
        private static String errorMessage="";

        /** ArrayList arr. */
        private static ArrayList<String> arr;

  public static void main(String args []) throws FileNotFoundException
  {
        File f1 = new File("examples/teste.txt");
                if(f1.exists())
                {
                  FileInputStream s1=new FileInputStream(f1);
                        System.out.println("Reading file...");
                }
                else System.out.println("File not found.");
    try
    {
      BufferedReader stream =  new BufferedReader(new FileReader(f1));
          Grammar myYal = new Grammar(stream);

      SimpleNode root = myYal.Module();
      root.dump("");

/* TESTING
      for (int i=0; i < order.size(); i++)
      	System.out.println("ORDER: "+order.get(i));
*/
                System.out.println("ISTO: "+globalVars.get("ab").getValue());


      System.out.println("Accepted. " + myYal.eval(root));

      JVCgenerator g1=new JVCgenerator("teste");
      g1.addModule("nomeModulo");
      g1.addVar("variavel","2");
      g1.closeWriter();

    }
    catch (Exception e)
    {
      System.out.println("Error!");
      System.out.println("MESSAGE: "+e.getMessage());
    }
  }

  int eval(SimpleNode node)
  {
    if (node.jjtGetNumChildren() == 0)  // leaf node with integer value
    return node.val;
    else if (node.jjtGetNumChildren() == 1)  // only one child
    return this.eval((SimpleNode) node.jjtGetChild(0));
    SimpleNode lhs = (SimpleNode) node.jjtGetChild(0); //left child
    SimpleNode rhs = (SimpleNode) node.jjtGetChild(1); // right child
    switch (node.id)
    {
      case GrammarTreeConstants.JJTMODULE :
      //PORQUE? TODO
      System.out.println(".class public ");
      break;
      default : // abort
      System.out.println("Operador ilegal!");
      System.exit(1);
    }
    return 0;
  }

  static final public SimpleNode Module() throws ParseException {
                      /*@bgen(jjtree) Module */
                      SimpleNode jjtn000 = new SimpleNode(JJTMODULE);
                      boolean jjtc000 = true;
                      jjtree.openNodeScope(jjtn000);Token t1;
    try {
      jj_consume_token(MODULE);
      t1 = jj_consume_token(ID);
                            SimpleNode jjtn001 = new SimpleNode(JJTID);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
      try {
                            jjtree.closeNodeScope(jjtn001, true);
                            jjtc001 = false;
          jjtn001.module = (String) t1.image;
                System.out.println("MODULE: "+t1.image);
                globalVar=true;
      } finally {
                            if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001, true);
                            }
      }
      jj_consume_token(LCHAVETA);
      label_1:
      while (true) {
        if (jj_2_1(2)) {
          ;
        } else {
          break label_1;
        }
                       SimpleNode jjtn002 = new SimpleNode(JJTDECLARATION);
                       boolean jjtc002 = true;
                       jjtree.openNodeScope(jjtn002);
        try {
          Declaration();
        } catch (Throwable jjte002) {
                       if (jjtc002) {
                         jjtree.clearNodeScope(jjtn002);
                         jjtc002 = false;
                       } else {
                         jjtree.popNode();
                       }
                       if (jjte002 instanceof RuntimeException) {
                         {if (true) throw (RuntimeException)jjte002;}
                       }
                       if (jjte002 instanceof ParseException) {
                         {if (true) throw (ParseException)jjte002;}
                       }
                       {if (true) throw (Error)jjte002;}
        } finally {
                       if (jjtc002) {
                         jjtree.closeNodeScope(jjtn002, true);
                       }
        }
      }
      label_2:
      while (true) {
        if (jj_2_2(2)) {
          ;
        } else {
          break label_2;
        }
                                                     SimpleNode jjtn003 = new SimpleNode(JJTFUNCTION);
                                                     boolean jjtc003 = true;
                                                     jjtree.openNodeScope(jjtn003);
        try {
          Function();
        } catch (Throwable jjte003) {
                                                     if (jjtc003) {
                                                       jjtree.clearNodeScope(jjtn003);
                                                       jjtc003 = false;
                                                     } else {
                                                       jjtree.popNode();
                                                     }
                                                     if (jjte003 instanceof RuntimeException) {
                                                       {if (true) throw (RuntimeException)jjte003;}
                                                     }
                                                     if (jjte003 instanceof ParseException) {
                                                       {if (true) throw (ParseException)jjte003;}
                                                     }
                                                     {if (true) throw (Error)jjte003;}
        } finally {
                                                     if (jjtc003) {
                                                       jjtree.closeNodeScope(jjtn003, true);
                                                     }
        }
      }
      jj_consume_token(RCHAVETA);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
    {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

//sums and subs TODO  static final public void Declaration() throws ParseException {
                           Token t1, t2;
    if (jj_2_3(2)) {
           SimpleNode jjtn001 = new SimpleNode(JJTARRAY);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        ArrayElement();
      } catch (Throwable jjte001) {
           if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
           if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
           }
      }
    } else if (jj_2_4(2)) {
                                   SimpleNode jjtn002 = new SimpleNode(JJTSCALAR);
                                   boolean jjtc002 = true;
                                   jjtree.openNodeScope(jjtn002);
      try {
        ScalarElement();
      } catch (Throwable jjte002) {
                                   if (jjtc002) {
                                     jjtree.clearNodeScope(jjtn002);
                                     jjtc002 = false;
                                   } else {
                                     jjtree.popNode();
                                   }
                                   if (jjte002 instanceof RuntimeException) {
                                     {if (true) throw (RuntimeException)jjte002;}
                                   }
                                   if (jjte002 instanceof ParseException) {
                                     {if (true) throw (ParseException)jjte002;}
                                   }
                                   {if (true) throw (Error)jjte002;}
      } finally {
                                   if (jjtc002) {
                                     jjtree.closeNodeScope(jjtn002, true);
                                   }
      }
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    if (jj_2_8(2)) {
      jj_consume_token(ASSIGN);
      if (jj_2_6(2)) {
        jj_consume_token(31);
            SimpleNode jjtn003 = new SimpleNode(JJTARRAYSIZE);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
        try {
          ArraySize();
        } catch (Throwable jjte003) {
            if (jjtc003) {
              jjtree.clearNodeScope(jjtn003);
              jjtc003 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte003 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte003;}
            }
            if (jjte003 instanceof ParseException) {
              {if (true) throw (ParseException)jjte003;}
            }
            {if (true) throw (Error)jjte003;}
        } finally {
            if (jjtc003) {
              jjtree.closeNodeScope(jjtn003, true);
            }
        }
        jj_consume_token(32);
      } else if (jj_2_7(2)) {
        if (jj_2_5(2)) {
          t1 = jj_consume_token(ADDSUB_OP);
                                  SimpleNode jjtn004 = new SimpleNode(JJTADDSUBOP);
                                  boolean jjtc004 = true;
                                  jjtree.openNodeScope(jjtn004);
          try {
                                  jjtree.closeNodeScope(jjtn004, true);
                                  jjtc004 = false;
                if (globalVar == true)
                {
                        String lastGlobal=order.get(order.size()-1);
                        Object ob1=globalVars.get(lastGlobal);
                        ob1.setOperator((String) t1.image);
                        globalVars.put(lastGlobal,ob1);
                }

                System.out.println("operator: "+(String) t1.image);

         // jjtThis.val2 = (String) t1.image; globalSignal = (String) t1.image;

          } finally {
                                  if (jjtc004) {
                                    jjtree.closeNodeScope(jjtn004, true);
                                  }
          }
        } else {
          ;
        }
        t2 = jj_consume_token(INTEGER);
                                  SimpleNode jjtn005 = new SimpleNode(JJTINTEIRO);
                                  boolean jjtc005 = true;
                                  jjtree.openNodeScope(jjtn005);
        try {
                                  jjtree.closeNodeScope(jjtn005, true);
                                  jjtc005 = false;
                if (globalVar == true)
                {
                        String lastGlobal=order.get(order.size()-1);
                        Object ob1=globalVars.get(lastGlobal);
                        if (ob1.getOperator() == "-")
                                ob1.setValue("-"+(String) t2.image);
                        else ob1.setValue((String) t2.image);
                        globalVars.put(lastGlobal,ob1);
                }
          System.out.println("Value: "+Integer.parseInt((String) t2.image));
        /*jjtThis.valorInicial = Integer.parseInt(globalSignal + (String) t2.image)*/;
        } finally {
                                  if (jjtc005) {
                                    jjtree.closeNodeScope(jjtn005, true);
                                  }
        }
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      ;
    }
    jj_consume_token(PVIRG);
  }

  static final public void Function() throws ParseException {
                            /*@bgen(jjtree) function */
                            SimpleNode jjtn000 = new SimpleNode(JJTFUNCTION);
                            boolean jjtc000 = true;
                            jjtree.openNodeScope(jjtn000);Token t1;
    try {
        globalVar=false;
      if (jj_2_11(3)) {
        jj_consume_token(FUNCTION);
                                    SimpleNode jjtn001 = new SimpleNode(JJTFUNCRETURN);
                                    boolean jjtc001 = true;
                                    jjtree.openNodeScope(jjtn001);
        try {
          functionReturn();
        } catch (Throwable jjte001) {
                                    if (jjtc001) {
                                      jjtree.clearNodeScope(jjtn001);
                                      jjtc001 = false;
                                    } else {
                                      jjtree.popNode();
                                    }
                                    if (jjte001 instanceof RuntimeException) {
                                      {if (true) throw (RuntimeException)jjte001;}
                                    }
                                    if (jjte001 instanceof ParseException) {
                                      {if (true) throw (ParseException)jjte001;}
                                    }
                                    {if (true) throw (Error)jjte001;}
        } finally {
                                    if (jjtc001) {
                                      jjtree.closeNodeScope(jjtn001, true);
                                    }
        }
        jj_consume_token(ASSIGN);
        t1 = jj_consume_token(ID);
                if (!functions.containsKey((String) t1.image))
                    {
                      String lastReturn=order.get(order.size()-1);
                          String returnName=funcReturn.get(lastReturn).getName();

                      functions.put((String) t1.image,returnName);
                      order.add((String) t1.image);
                  }else
                  {
                     error=true;
                     errorMessage="Functions with same name: "+(String) t1.image;
                     System.out.println("ERROR: "+errorMessage);
                     System.exit(1);
                   }

                System.out.println("func assign id: "+(String) t1.image);
        jj_consume_token(LPAR);
        if (jj_2_9(2)) {
                   SimpleNode jjtn002 = new SimpleNode(JJTVARLIST);
                   boolean jjtc002 = true;
                   jjtree.openNodeScope(jjtn002);
          try {
            Varlist();
          } catch (Throwable jjte002) {
                   if (jjtc002) {
                     jjtree.clearNodeScope(jjtn002);
                     jjtc002 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte002 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte002;}
                   }
                   if (jjte002 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte002;}
                   }
                   {if (true) throw (Error)jjte002;}
          } finally {
                   if (jjtc002) {
                     jjtree.closeNodeScope(jjtn002, true);
                   }
          }
        } else {
          ;
        }
        jj_consume_token(RPAR);
      } else if (jj_2_12(2)) {
        jj_consume_token(FUNCTION);
        t1 = jj_consume_token(ID);
          if (!functions.containsKey((String) t1.image))
                    {
                      String lastReturn=order.get(order.size()-1);

                      functions.put((String) t1.image,"null");
                      order.add((String) t1.image);
                  }else
                  {
                     error=true;
                     errorMessage="Functions with same name: "+(String) t1.image;
                     System.out.println("ERROR: "+errorMessage);
                     System.exit(1);
                   }

                System.out.println("func id: "+(String) t1.image);
        jj_consume_token(LPAR);
        if (jj_2_10(2)) {
                 SimpleNode jjtn003 = new SimpleNode(JJTVARLIST);
                 boolean jjtc003 = true;
                 jjtree.openNodeScope(jjtn003);
          try {
            Varlist();
          } catch (Throwable jjte003) {
                 if (jjtc003) {
                   jjtree.clearNodeScope(jjtn003);
                   jjtc003 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte003 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte003;}
                 }
                 if (jjte003 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte003;}
                 }
                 {if (true) throw (Error)jjte003;}
          } finally {
                 if (jjtc003) {
                   jjtree.closeNodeScope(jjtn003, true);
                 }
          }
        } else {
          ;
        }
        jj_consume_token(RPAR);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
                funcParam=false;
      jj_consume_token(LCHAVETA);
                     SimpleNode jjtn004 = new SimpleNode(JJTSTMTLST);
                     boolean jjtc004 = true;
                     jjtree.openNodeScope(jjtn004);
      try {
        Stmtlst();
      } catch (Throwable jjte004) {
                     if (jjtc004) {
                       jjtree.clearNodeScope(jjtn004);
                       jjtc004 = false;
                     } else {
                       jjtree.popNode();
                     }
                     if (jjte004 instanceof RuntimeException) {
                       {if (true) throw (RuntimeException)jjte004;}
                     }
                     if (jjte004 instanceof ParseException) {
                       {if (true) throw (ParseException)jjte004;}
                     }
                     {if (true) throw (Error)jjte004;}
      } finally {
                     if (jjtc004) {
                       jjtree.closeNodeScope(jjtn004, true);
                     }
      }
      jj_consume_token(RCHAVETA);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void functionReturn() throws ParseException {
                               Token t1;
    t1 = jj_consume_token(ID);
                        SimpleNode jjtn001 = new SimpleNode(JJTID);
                        boolean jjtc001 = true;
                        jjtree.openNodeScope(jjtn001);
    try {
                        jjtree.closeNodeScope(jjtn001, true);
                        jjtc001 = false;
        System.out.println("Func return id: "+(String) t1.image);
   //jjtThis.nameF = (String) t1.image; name_f1 = (String) t1.image;

        if (!funcReturn.containsKey((String) t1.image))
                    {

                         Object ob1=new Object((String) t1.image,"scalar",null);

                    funcReturn.put((String) t1.image,ob1);
                    order.add((String) t1.image);
                  }else
                  {
                     error=true;
                     errorMessage="Function: Return var with same id: "+(String) t1.image;
                     System.out.println("ERROR: "+errorMessage);
                     System.exit(1);
                   }
    } finally {
                        if (jjtc001) {
                          jjtree.closeNodeScope(jjtn001, true);
                        }
    }
    if (jj_2_13(2)) {
      jj_consume_token(31);
      jj_consume_token(32);
                        String lastReturn=order.get(order.size()-1);
                        Object ob1=funcReturn.get(lastReturn);

                        ob1.setType("array");

                        funcReturn.put(lastReturn,ob1);

                        System.out.println("Func return type: ARRAY");
    } else {
      ;
    }
  }

  static final public void Varlist() throws ParseException {
        funcParam=true;
    if (jj_2_14(2)) {
           SimpleNode jjtn001 = new SimpleNode(JJTARRAY);
           boolean jjtc001 = true;
           jjtree.openNodeScope(jjtn001);
      try {
        ArrayElement();
      } catch (Throwable jjte001) {
           if (jjtc001) {
             jjtree.clearNodeScope(jjtn001);
             jjtc001 = false;
           } else {
             jjtree.popNode();
           }
           if (jjte001 instanceof RuntimeException) {
             {if (true) throw (RuntimeException)jjte001;}
           }
           if (jjte001 instanceof ParseException) {
             {if (true) throw (ParseException)jjte001;}
           }
           {if (true) throw (Error)jjte001;}
      } finally {
           if (jjtc001) {
             jjtree.closeNodeScope(jjtn001, true);
           }
      }
    } else if (jj_2_15(2)) {
           SimpleNode jjtn002 = new SimpleNode(JJTSCALAR);
           boolean jjtc002 = true;
